--- a/astrogrid/portalB/build.xml
+++ b/astrogrid/portalB/build.xml
@@ -2,10 +2,13 @@
 <!--+
     | <cvs:source>$Source: /Users/pharriso/Work/ag/repo/git/astrogrid-mirror/astrogrid/portalB/Attic/build.xml,v $</cvs:source>
     | <cvs:date>$Author: dave $</cvs:date>
-    | <cvs:author>$Date: 2003/06/30 18:40:24 $</cvs:author>
-    | <cvs:version>$Revision: 1.33 $</cvs:version>
+    | <cvs:author>$Date: 2003/07/01 09:14:58 $</cvs:author>
+    | <cvs:version>$Revision: 1.34 $</cvs:version>
     | <cvs:log>
     | $Log: build.xml,v $
+    | Revision 1.34  2003/07/01 09:14:58  dave
+    | Updates to release build
+    |
     | Revision 1.33  2003/06/30 18:40:24  dave
     | Updated release build
     |
@@ -169,7 +172,7 @@
 	<property name="myspace.qin"    value="http://143.210.36.131:8080"/>
 	<property name="myspace.local"  value="http://localhost:8080"/>
 	<property name="myspace.server" value="${myspace.local}"/>
-	<property name="myspace.data"   value="data.005"/>
+	<property name="myspace.data"   value="data.006"/>
 
 	<!-- JAF properties -->
 	<property name="jaf.src"   value="depends/jaf/jaf-1.0.2.zip"/>
