*** empty log message ***

--- a/astrogrid/datacenter/config/ASTROGRID_datasetconfig.properties
+++ b/astrogrid/datacenter/config/ASTROGRID_datasetconfig.properties
@@ -130,6 +130,13 @@ JOB.MONITOR.REQUEST_TEMPLATE= \
 
 
 #
+# [Database]..[tablename] seperator template 
+# Necessary due to different database naming conventions e.g. Sybase uses
+# [database]..[tablename] where as MYSQL uses [database].[tablename]
+QUERY.FROM.SEPARATOR=.. 
+
+
+#
 # Datacenter specific UCD to Column Headings mappings go here. The format is:
 # <catalog-name>.<table-name>.<UCD>=<value>
 #
