Okay got it to work with a Registry webservice.  Also uncommented out 1 println statement so it told how many threads their was

--- a/test/WSTester/src/build.xml
+++ b/test/WSTester/src/build.xml
@@ -33,6 +33,7 @@
 		<copy toDir="${project.build}/classes">
 			<fileset dir="java">
 				<include name="**/org/tools/wstool/xml/*.xml"/>
+					<include name="**/org/tools/wstool/xml/*.dtd"/>
 			</fileset>
 		</copy>
 		
