--- a/astrogrid/registry/build.xml
+++ b/astrogrid/registry/build.xml
@@ -1,24 +1,25 @@
 <project name="astrogrid-registry" basedir="." default="build">
 
-  <target name="init">
     <property name="src.dir" value="${basedir}/src/java"/>
-    <property name="classes.dir" value="${basedir}/ant-classes"/>
-    <property name="lib.dir" value="${basedir}/lib"/>
-    
+    <property name="classes.dir" value="${basedir}/classes"/>
+
+  <target name="init">
     <path id="build.class.path">
-      <fileset dir="lib.dir">
+      <fileset dir="${basedir}/lib">
         <include name="*.jar"/>
         <include name="*.zip"/>
       </fileset>
     </path>
-    
+<!--    
     <path id="full.class.path">
       <path refid="build.class.path"/>
       <pathelement location="${classes.dir}"/>
     </path>
+-->
   </target>
   
   <target name="build" depends="init">
+    <mkdir dir="${classes.dir}"/>  
     <javac
       classpathref="build.class.path"
       debug="true"
