*** empty log message ***

--- a/astrogrid/datacenter/config/ASTROGRID_datacentermessages.properties
+++ b/astrogrid/datacenter/config/ASTROGRID_datacentermessages.properties
@@ -76,3 +76,9 @@ AGDTCE00410=:Operation: Could not create Operation from element.
 AGDTCE00420=:Catalog: Could not create Catalog from element.
 AGDTCE00430=:Field: Unknown field type [{0}] encountered.
 AGDTCE00440=:Table: Could not create Table from element.
+
+AGDTCE00500=:GroupBy: Could not create GroupBy from element.
+AGDTCE00510=:GroupBy: Could not create SQL for GroupBy element.
+
+AGDTCE00520=:GroupBy: Could not create OrderBy from element.
+AGDTCE00530=:GroupBy: Could not create SQL for OrderBy element.
