--- a/astrogrid/registry/project.properties
+++ b/astrogrid/registry/project.properties
@@ -1,1 +1,5 @@
+# Remote repository location.
 maven.repo.remote = http://www.ibiblio.org/maven/,http://www.astrogrid.org/maven/
+
+# ChangeLog
+maven.changelog.range=31
