--- a/astrogrid/mySpace/configFiles/ASTROGRID_myspacemanagermessages.properties
+++ b/astrogrid/mySpace/configFiles/ASTROGRID_myspacemanagermessages.properties
@@ -60,7 +60,7 @@ AGMMCW00032=:{0}:To be defined.
 
 
 #MS_E_RGCSRVM=No servers specified in the registry configuration file.
-AGMMCE00050=:{0}: No servers specified in the {1} registry configuration file. AGMMCE00140
+AGMMCE00050=:{0}: No servers specified in the registry configuration file.
 #MS_E_RGCDRED=Failed to read the registry configuration file.
 AGMMCE00051=:{0}:Failed to read the registry configuration file.
 #MS_E_SRVINVN=Invalid server name.
