--- a/astrogrid/mySpace/configFiles/ASTROGRID_myspacemanagermessages.properties
+++ b/astrogrid/mySpace/configFiles/ASTROGRID_myspacemanagermessages.properties
@@ -80,8 +80,8 @@ AGMMCE00060=:{0}: Class not found.
 
 
 #############MySpaceServer
-#NULL_FILE_DELETE=There is no file to delete, check your file path and try again.otherwise this fuction is failed!!cat
-AGMSCE00030=:{0}:There is no file to delete, check your file path and try again.otherwise this fuction is failed!!cat
+#NULL_FILE_DELETE=There is no file to delete, check your file path and try again.otherwise this fuction is failed!!
+AGMSCE00030=:{0}:There is no file to delete, check your file path and try again.otherwise this fuction is failed!!
 #NULL_FILE_SAVE=There is no file to save, check file path and try again.
 AGMSCE00031=:{0}:There is no file to save, check file path and try again.
 #ERROR_READING_FILE=Error Reading from file.
