--- a/astrogrid/registry/project.properties
+++ b/astrogrid/registry/project.properties
@@ -1,5 +1,8 @@
 # Remote repository location.
-maven.repo.remote = http://www.ibiblio.org/maven/,http://www.astrogrid.org/maven/
+maven.repo.remote=http://www.ibiblio.org/maven/,http://www.astrogrid.org/maven/
 
 # ChangeLog
 maven.changelog.range=31
+
+# Development process URL
+maven.xdoc.developmentProcessUrl=http://wiki.astrogrid.org/bin/view/Astrogrid/DevelopmentDocs
