--- a/astrogrid/registry/project.properties
+++ b/astrogrid/registry/project.properties
@@ -6,3 +6,7 @@ maven.changelog.range=31
 
 # Development process URL
 maven.xdoc.developmentProcessUrl=http://wiki.astrogrid.org/bin/view/Astrogrid/DevelopmentDocs
+
+# UI
+maven.ui.section.background=#00f
+maven.ui.banner.background=#00f
