*** empty log message ***

--- a/astrogrid/jes/config/ASTROGRID_jesmessages.properties
+++ b/astrogrid/jes/config/ASTROGRID_jesmessages.properties
@@ -10,6 +10,8 @@
 #                                                                                #
 #     YOU HAVE BEEN WARNED!                                                      #
 ##################################################################################
+# This first entry is control information. Please do not alter or remove...
+SUBSYSTEM=JES
 #
 # Messages issued by the JES (Job Entry System) components.
 #
@@ -32,51 +34,54 @@ AGJESZ00003=AGJESZ00003:Message: Message key is null.
 AGJESZ00004=AGJESZ00004:Message: Message pattern or inserts are invalid
 AGJESZ00005=AGJESZ00005:Message: Message not found in ResourceBundle
 
-AGJESE00030=:JobController: Failed to parse Job Submission Request.
-AGJESE00040=:JobController: Job submission ultimately failed. See previous messages.
-AGJESI00050=:JobController: Job successfully submitted.
-AGJESE00060=:JobController: Failed to contact AstroGrid message log.
-AGJESI00070=:JobController: Job status [{0}] job name [{1}] userid [{2}] community [{3}] job id [{4}]
+AGJESE00030=:{0}: Failed to parse Job Submission Request.
+AGJESE00040=:{0}: Job submission ultimately failed. See previous messages.
+AGJESI00050=:{0}: Job successfully submitted.
+AGJESE00060=:{0}: Failed to contact AstroGrid message log.
+AGJESI00070=:{0}: Job status [{1}] job name [{2}] userid [{3}] community [{4}] job id [{5}]
 
-AGJESE00140=:Job: Could not create JobFactory [{0}]
-AGJESE00150=:JobFactory: Could not create Job datasource [{0}]
-AGJESE00160=:JobFactory: Could not create connection to Job datasource.
-AGJESE00170=:JobFactory: Could not create Job from request document.
+AGJESE00140=:{0}: Could not create JobFactory [{1}]
+AGJESE00150=:{0}: Could not create Job datasource [{1}]
+AGJESE00160=:{0}: Could not create connection to Job datasource.
+AGJESE00170=:{0}: Could not create Job from request document.
 
-AGJESE00300=:JobFactory: Failure to commit changes to Job datasource.
-AGJESE00310=:JobFactory: Failure in rolling back changes to Job datasource.
-AGJESE00320=:JobFactory: Failed to close connection to Job datasource.
+AGJESE00300=:{0}: Failure to commit changes to Job datasource.
+AGJESE00310=:{0}: Failure in rolling back changes to Job datasource.
+AGJESE00320=:{0}: Failed to close connection to Job datasource.
 
-AGJESE00400=:JobController: Failed to format response message.
-AGJESE00410=:JobController: Failed to inform job scheduler.
-AGJESE00420=:JobController: Failed to format job schedule request.
-AGJESE00430=:JobMonitor: Failed to format job schedule request.
-AGJESE00440=:JobMonitor: Failed to inform job scheduler.
+AGJESE00400=:{0}: Failed to format response message.
+AGJESE00410=:{0}: Failed to inform job scheduler.
+AGJESE00420=:{0}: Failed to format job schedule request.
+AGJESE00430=:{0}: Failed to format job schedule request.
+AGJESE00440=:{0}: Failed to inform job scheduler.
 
-AGJESE00490=:JobScheduler: Failed to parse job schedule request.
-AGJESE00500=:JobScheduler: Job scheduling ultimately failed. See previous messages.
-AGJESE00510=:JobScheduler: Failed to format datacenter run request.
-AGJESE00520=:JobScheduler: Failed to contact datacenter.
+AGJESE00490=:{0}: Failed to parse job schedule request.
+AGJESE00500=:{0}: Job scheduling ultimately failed. See previous messages.
+AGJESE00510=:{0}: Failed to format datacenter run request.
+AGJESE00520=:{0}: Failed to contact datacenter.
 
-AGJESE00530=:JobMonitor: Job monitoring ultimately failed. See previous messages.
-AGJESE00540=:JobMonitor: Failed to parse job monitoring request.
-AGJESE00550=:JobMonitor: Failed to contact AstroGrid message log.
-AGJESI00560=:JobMonitor: Job status [{0}] job name [{1}] userid [{2}] community [{3}] job id [{4}] step name [{5}] \
-step number [{6}] step status [{7}] step message [{8}]
+AGJESE00530=:{0}: Job monitoring ultimately failed. See previous messages.
+AGJESE00540=:{0}: Failed to parse job monitoring request.
+AGJESE00550=:{0}: Failed to contact AstroGrid message log.
+AGJESI00560=:{0}: Job status [{1}] job name [{2}] userid [{3}] community [{4}] job id [{5}] step name [{6}] \
+step number [{7}] step status [{8}] step message [{9}]
 
-AGJESE00600=:Catalog: Could not create Catalog from given element.
-AGJESE00610=:Query: Could not create Query from given element.
-AGJESE00620=:Table: Could not create Table from given element.
-AGJESE00630=:Service: Could not create Service from given element.
+AGJESE00600=:{0}: Could not create Catalog from given element.
+AGJESE00610=:{0}: Could not create Query from given element.
+AGJESE00620=:{0}: Could not create Table from given element.
+AGJESE00630=:{0}: Could not create Service from given element.
 
-AGJESE00700=:JobFactoryImpl: Duplicate Job found - Job URN [{0}]
-AGJESE00710=:JobFactoryImpl: Job not found - Job URN [{0}]
-AGJESE00720=:JobFactoryImpl: Jobs not found - with criteria [{0}]
-AGJESE00730=:JobFactoryImpl: JobStep not found for Job with URN [{0}]
-AGJESE00740=:JobFactoryImpl: Duplicate Query found - Job URN [{0}] and JobStep number [{1}]
-AGJESE00750=:JobFactoryImpl: Query not found for Job with URN [{0}] and JobStep number [{1}]
-AGJESE00760=:JobFactoryImpl: Catalog not found for Query in Job with Job URN [{0}] and JobStep number [{1}]
-AGJESE00770=:JobFactoryImpl: Table not found for Catalog [{0}] in Job with Job URN [{1}] and JobStep number [{2}]
-AGJESE00780=:JobFactoryImpl: Service not found for Catalog [{0}] in Job with Job URN [{1}] and JobStep number [{2}]
-AGJESE00790=:JobFactoryImpl: Unable to complete find request.
-AGJESE00800=:JobFactoryImpl: Unable to complete update request.
+AGJESE00700=:{0}: Duplicate Job found - Job URN [{1}]
+AGJESE00710=:{0}: Job not found - Job URN [{1}]
+AGJESE00720=:{0}: Jobs not found - with criteria [{1}]
+AGJESE00730=:{0}: JobStep not found for Job with URN [{1}]
+AGJESE00740=:{0}: Duplicate Query found - Job URN [{1}] and JobStep number [{2}]
+AGJESE00750=:{0}: Query not found for Job with URN [{1}] and JobStep number [{2}]
+AGJESE00760=:{0}: Catalog not found for Query in Job with Job URN [{1}] and JobStep number [{2}]
+AGJESE00770=:{0}: Table not found for Catalog [{1}] in Job with Job URN [{2}] and JobStep number [{3}]
+AGJESE00780=:{0}: Service not found for Catalog [{1}] in Job with Job URN [{2}] and JobStep number [{3}]
+AGJESE00790=:{0}: Unable to complete find request.
+AGJESE00800=:{0}: Unable to complete update request.
+
+AGJESE00810=:{0}: Multiple rows encountered on table {1}. This should contain a single row only. 
+AGJESE00820=:{0}: Unexpected SQL error on table {1}.
