--- a/astrogrid/datacenter/config/ASTROGRID_datacentermessages.properties
+++ b/astrogrid/datacenter/config/ASTROGRID_datacentermessages.properties
@@ -5,25 +5,45 @@
 #     <<<particularly>>> after a line-end continuation character.                #
 #     e.g. there must be no white space after a backslash continuation...        #
 #                                                                                #
-#     AGJESZ00002=AGJESZ00002:DatasetAgent: \                                    #
+#     AGDTCZ00002=AGDTCZ00002:DatasetAgent: \                                    #
 #     Not initialized. Perhaps my configuration file is missing.                 #
 #                                                                                #
 #     YOU HAVE BEEN WARNED!                                                      #
 ##################################################################################
+# This first entry is control information. Please do not alter or remove...
+SUBSYSTEM=DTC
 #
 # Messages issued by the datacenter components.
 #
 # Format of the message key: AGDTCEnnnnn
 # AG       AstroGrid
 # DTC      DaTaCenter
-# E/W/I/Z  E = error,  W = warning  I = information  Z = error messages with text hard coded in program (invariably fatal)
-# nnnnn    unique message number
+# E/W/I/Z  E = error,  W = warning  I = information  Z = error messages with text hard coded in program
+# nnnnn    unique message number (in effect this can be of any length, but see notes below)
 #
 # Format of the message body:
 # <datacenter-component-name>: <rest-of-message>
-# See documentation for MessageFormat class for inserts into messages (e.g. {0})
+# See documentation for java.text.MessageFormat class for inserts into messages (e.g. {0})
 #
-# Note Z style messages (e.g. AGDTCZ00001) are included here for documentary purposes only.
+# Note. Messages in the range 00001-99999 are reserved to development by org.astrogrid
+# Users are free to use message numbers above this range (See below for guidance).
+#
+# Note. Z style messages (e.g. AGDTCZ00001) are included here for documentary purposes only.
+# Z style messages are invariably system errors associated with configuration files or messages.
+#
+# Note. User-written routines or modules that generate their own messages must follow additional
+# constrains. Please follow the above protocols, plus:
+# (1) Use only message numbers in the range 100000 or above.
+# (2) Attach a unique acronym to the message key that will help distinguish the message 
+#     from other potential user-generated messages ON A GLOBAL BASIS!
+# (3) Ensure user messages are placed at the end of the file. 
+# (4) Please clearly document the message, or make sure its intent is obvious from the
+#     message content. 
+#
+# For example:
+# AGDTCE100023@leicester:{0}: Sort step failure due to insufficient memory.\
+# Contact your system administrator. Recommendations: increase memory \
+# or make available additional scratch disk space. 
 #
 AGDTCZ00001=AGDTCZ00001:DatasetAgent: Could not read my configuration file {0}
 AGDTCZ00002=AGDTCZ00002:DatasetAgent: Not initialized. Perhaps my configuration file is missing.
@@ -31,54 +51,49 @@ AGDTCZ00003=AGDTCZ00003:Message: Message key is null.
 AGDTCZ00004=AGDTCZ00004:Message: Message pattern or inserts are invalid
 AGDTCZ00005=AGDTCZ00005:Message: Message not found in ResourceBundle
 
-AGDTCE00030=:DatasetAgent: Failed to parse Job Request.
-AGDTCE00040=:DatasetAgent: Query ultimately failed. See previous messages.
+AGDTCE00030=:{0}: Failed to parse Job Request.
+AGDTCE00040=:{0}: Query ultimately failed. See previous messages.
 
-AGDTCE00050=:Query: Could not create QueryFactory {0}
-AGDTCE00055=:Query: Could not create Query from elements.
-AGDTCE00060=:QueryFactory: Could not create datasource for datasource name: {0}, for catalog: {1}
-AGDTCE00070=:QueryFactory: Could not create connection.
-AGDTCE00080=:QueryFactory: Execution of query failed.
+AGDTCE00050=:{0}: Could not create QueryFactory {1}
+AGDTCE00055=:{0}: Could not create Query from elements.
+AGDTCE00060=:{0}: Could not create datasource for datasource name: {1}, for catalog: {2}
+AGDTCE00070=:{0}: Could not create connection.
+AGDTCE00080=:{0}: Execution of query failed.
 
-AGDTCE00090=:Allocation: Could not create MySpaceFactory {0}
-AGDTCE00100=:MySpaceFactory: Could not create MySpace cache allocation for job {0}
-AGDTCE00110=:MySpaceFactory: Could not destroy compressed stream.
+AGDTCE00090=:{0}: Could not create MySpaceFactory {1}
+AGDTCE00100=:{0}: Could not create MySpace cache allocation for job {1}
+AGDTCE00110=:{0}: Could not destroy compressed stream.
 
-AGDTCE00120=:VOTable: Could not create VOTableFactory {0}
-AGDTCE00130=:VOTableFactory: Could not convert query result to VOTable
+AGDTCE00120=:{0}: Could not create VOTableFactory {1}
+AGDTCE00130=:{0}: Could not convert query result to VOTable
 
-AGDTCE00140=:Job: Could not create JobFactory {0}
-AGDTCE00150=:JobFactory: Could not create Job datasource {0}
-AGDTCE00160=:JobFactory: Could not create connection to Job datasource.
-AGDTCE00170=:JobFactory: Unable to create Job from request document.
-AGDTCE00180=:Job: Unable to create Job from request document
-AGDTCE00185=:Job: Error when invoking the JobMonitor.
-AGDTCE00190=:JobFactory: Unable to update Job with jobid {0}
-AGDTCE00192=:JobFactory: Unable to find Job with jobid {0}
-AGDTCE00194=:JobFactory: Unable to delete Job with jobid {0}
+AGDTCE00140=:{0}: Could not create JobFactory {1}
+AGDTCE00150=:{0}: Could not create Job datasource {1}
+AGDTCE00160=:{0}: Could not create connection to Job datasource.
+AGDTCE00170=:{0}: Unable to create Job from request document.
+AGDTCE00180=:{0}: Unable to create Job from request document
+AGDTCE00185=:{0}: Error when invoking the JobMonitor.
+AGDTCE00190=:{0}: Unable to update Job with jobid {1}
+AGDTCE00192=:{0}: Unable to find Job with jobid {1}
+AGDTCE00194=:{0}: Unable to delete Job with jobid {1}
 
-AGDTCE00200=:From: Could not create From from element.
-AGDTCE00210=:From: Could not create SQL for From.
+AGDTCE00200=:{0}: Could not create From from element.
+AGDTCE00210=:{0}: Could not create SQL for From.
 
-AGDTCE00220=:Criteria: Could not create Criteria element.
-AGDTCE00230=:Criteria: Could not create SQL for Criteria - unsupported or ill-targeted operation "{0}".
+AGDTCE00220=:{0}: Could not create Criteria element.
+AGDTCE00230=:{0}: Could not create SQL for Criteria - unsupported or ill-targeted operation "{1}".
 
-AGDTCE00240=:Return: Could not create Return element.
-AGDTCE00250=:Return: Could not create SQL for Return.
+AGDTCE00240=:{0}: Could not create Return element.
+AGDTCE00250=:{0}: Could not create SQL for Return.
 
-AGDTCE00300=:Allocation: An error was returned from MySpaceManager. Status: {0}. Details: {1}
-AGDTCE00310=:Allocation: Error when invoking MySpaceManager.
-AGDTCE00320=:Allocation: Failed to parse response document returned from MySpaceManager.
+AGDTCE00300=:{0}: An error was returned from MySpaceManager. Status: {1}. Details: {2}
+AGDTCE00310=:{0}: Error when invoking MySpaceManager.
+AGDTCE00320=:{0}: Failed to parse response document returned from MySpaceManager.
 
-AGDTCE00400=:Operation: Unsupported SQL operaton [{0}] encountered in query.
-AGDTCE00410=:Operation: Could not create Operation from element.
+AGDTCE00400=:{0}: Unsupported SQL operaton "{1}" encountered in query.
+AGDTCE00410=:{0}: Could not create Operation from element.
 
-AGDTCE00420=:Catalog: Could not create Catalog from element.
-AGDTCE00430=:Field: Unknown field type [{0}] encountered.
-AGDTCE00440=:Table: Could not create Table from element.
-
-AGDTCE00500=:GroupBy: Could not create GroupBy from element.
-AGDTCE00510=:GroupBy: Could not create SQL for GroupBy element.
-
-AGDTCE00520=:GroupBy: Could not create OrderBy from element.
-AGDTCE00530=:GroupBy: Could not create SQL for OrderBy element.
+AGDTCE00420=:{0}: Could not create Catalog from element.
+AGDTCE00430=:{0}: Unknown field type "{1}" encountered.
+AGDTCE00440=:{0}: Could not create Table from element.
+AGDTCE00450=:{0}: Could not create Service from element.
