--- a/astrogrid/datacenter/build.xml
+++ b/astrogrid/datacenter/build.xml
@@ -1,6 +1,7 @@
 <project name="astrogrid-datacenter" basedir="." default="build">
 
     <property name="src.dir" value="${basedir}/src/java"/>
+    <property name="test.dir" value="${basedir}/test/java"/>
     <property name="classes.dir" value="${basedir}/classes"/>
 
   <target name="init">
@@ -29,5 +30,17 @@
       fork="true"
       srcdir="${src.dir}"/>
   </target>
+
+  <target name="build-test" depends="init">
+    <mkdir dir="${classes.dir}"/>
+    <javac
+      classpathref="build.class.path"
+      debug="true"
+      destdir="${classes.dir}"
+      fork="true"
+      srcdir="${test.dir}"/>
+  </target>
+
+  <target name="build-all" depends="build,build-test"/>
 
 </project>
